@@ -1,5 +1,6 @@
 Version 0.9.8   unreleased
 
+    * Add missing check for proper version of mime-types gem in Cucumber setup.
     * Add explicit version of Rack gem for Cucumber tests, to avoid build failures.
 
 Version 0.9.7   20 Apr 2016
